[package]
name = "stream-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.21"
hyper = { version = "0.14.19", features = [ "stream"  ], optional = true }

[features]
default = []
hyper = ["default", "dep:hyper"]

[dev-dependencies]
tokio = {version = "1.19", features=["rt-multi-thread", "macros", "time"]}

