[package]
name = "streamer"
version = "0.1.0"
edition = "2021"
keywords = [ "futures-util", "futures", "async", "stream"]
categories = ["network-programming", "web-programming"]
description = "Streamer is a handy tool deal with stream"
homepage = "https://crates.io/crates/streamer"
repository = "https://github.com/HomelyGuy/streamer"
documentation = "https://docs.rs/streamer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.21"
hyper = { version = "0.14.19", features = [ "stream"  ], optional = true }

[features]
default = []
hyper = ["default", "dep:hyper"]

[dev-dependencies]
tokio = {version = "1.19", features=["rt-multi-thread", "macros", "time"]}

